--- a/pom.xml
+++ b/pom.xml
@@ -82,6 +82,15 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+
+		<!-- https://mvnrepository.com/artifact/tk.mybatis/mapper-spring-boot-starter -->
+		<dependency>
+			<groupId>tk.mybatis</groupId>
+			<artifactId>mapper-spring-boot-starter</artifactId>
+			<version>1.1.1</version>
+		</dependency>
+
+
 		<!--pagehelper-->
 		<dependency>
 			<groupId>com.github.pagehelper</groupId>
