--- a/pom.xml
+++ b/pom.xml
@@ -122,9 +122,14 @@
 				</configuration>
 				<dependencies>
 					<dependency>
-						<groupId>org.mybatis.generator</groupId>
-						<artifactId>mybatis-generator-core</artifactId>
-						<version>1.3.3.MDX</version>
+						<groupId>mysql</groupId>
+						<artifactId>mysql-connector-java</artifactId>
+						<version>5.1.38</version>
+					</dependency>
+					<dependency>
+						<groupId>tk.mybatis</groupId>
+						<artifactId>mapper</artifactId>
+						<version>3.4.0</version>
 					</dependency>
 				</dependencies>
 			</plugin>
