--- a/pom.xml
+++ b/pom.xml
@@ -102,7 +102,15 @@
 			<artifactId>druid</artifactId>
 			<version>1.0.18</version>
 		</dependency>
-	</dependencies>
+
+        <!-- https://mvnrepository.com/artifact/com.google.code.gson/gson -->
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.8.1</version>
+        </dependency>
+
+    </dependencies>
 
 	<build>
 		<plugins>
