--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -11,12 +11,20 @@ spring:
       initial-size: 1
       min-idle: 1
       max-wait: 6000
-      time-between-eviction-runs-millis: 60000
       min-evictable-idle-time-millis: 300000
       validation-query: select *
       test-while-idle: true
       test-on-borrow: false
       test-on-return: false
+      remove_abandoned: true #超过removeAbandonedTimeout时间后，是否进 行没用连接（废弃）的回收（默认为false，调整为true)
+      remove_abandoned_timeout: 180 #超过时间限制，回收没有用(废弃)的连接（默认为 300秒，调整为180）
+      time-between-eviction-runs-millis: 18800
+      pool-prepared-statements: true
+      max-pool-prepared-statement-per-connection-size: 20
+      connection-properties: config.decrypt=true;druid.stat.mergeSql=true;druid.stat.slowSqlMillis=5000
+      filters: stat,wall,slf4j
+
+
   data:
     mongodb:
       host: 127.0.0.1
@@ -30,6 +38,7 @@ spring:
   jpa:
     show-sql: true
 
+
 pagehelper:
   helper-dialect: mysql
   reasonable: false
@@ -39,6 +48,7 @@ logging:
   level:
     com.monarchwang: debug
   file: cherish.log
+  config: classpath:logback.xml
 
 mapper:
     mappers:
@@ -47,4 +57,5 @@ mapper:
     identity: MYSQL
 mybatis:
   configuration:
-    log-impl: org.apache.ibatis.logging.log4j.Log4jImpl
+    log-impl: org.apache.ibatis.logging.slf4j.Slf4jImpl
+debug: true
