--- a/pom.xml
+++ b/pom.xml
@@ -104,9 +104,13 @@
 			<version>1.1.1</version>
 		</dependency>
 
+		<dependency>
+			<groupId>com.aliyun.oss</groupId>
+			<artifactId>aliyun-sdk-oss</artifactId>
+			<version>2.7.0</version>
+		</dependency>
 
     </dependencies>
-
 	<build>
 		<resources>
 			<resource>
