--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,9 +5,9 @@ spring:
       name: dataSource
       type: com.alibaba.druid.pool.DruidDataSource
       driver-class-name: com.mysql.jdbc.Driver
-      url: jdbc:mysql://localhost:3306/cherish
+      url: jdbc:mysql://119.28.71.137:3306/cherish?useUnicode=true&characterEncoding=UTF-8
       username: root
-      password: 123456
+      password: monarchwang
       initial-size: 1
       min-idle: 1
       max-wait: 6000
@@ -27,13 +27,16 @@ spring:
 
   data:
     mongodb:
-      host: 127.0.0.1
+      host: 119.28.71.137
       port: 27017
       database: cherish
+      username: monarchwang
+      password: wglWGL123
+      authentication-database: admin
   redis:
-    host: 101.200.57.175
+    host: 119.28.71.137
     port: 6379
-    password: monarchwang
+    password:
     timeout: 3000
   jpa:
     show-sql: true
