优化代码目录结构

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -55,7 +55,7 @@ logging:
 
 mapper:
     mappers:
-        - com.monarchwang.website.utils.MyMapper
+        - com.monarchwang.website.utils.system.MyMapper
     not-empty: false
     identity: MYSQL
 mybatis:
