--- a/pom.xml
+++ b/pom.xml
@@ -110,6 +110,26 @@
 			<version>2.7.0</version>
 		</dependency>
 
+        <!--图片处理-->
+		<!-- https://mvnrepository.com/artifact/com.alibaba/simpleimage -->
+		<dependency>
+			<groupId>com.alibaba</groupId>
+			<artifactId>simpleimage</artifactId>
+			<version>1.2.3</version>
+		</dependency>
+        <!-- https://mvnrepository.com/artifact/net.coobird/thumbnailator -->
+        <dependency>
+            <groupId>net.coobird</groupId>
+            <artifactId>thumbnailator</artifactId>
+            <version>0.4.8</version>
+        </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
+        </dependency>
+
+
     </dependencies>
 	<build>
 		<resources>
